--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,9 +10,11 @@ body {
   font-family: 'Epilogue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $text-primary;
 }
 
 #root {
+  position: relative;
   background: url('../images/main-bg.png'), $green;
   background-size: cover;
   background-position: center;
@@ -25,11 +27,10 @@ body {
 .input_form {
   @include input-border;
   background-color: $white;
-  padding: 11px;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
   font-size: 1rem;
-  width: 100%;
   outline: $green;
-  color: $text-primary;
 }
 
 .input_form::placeholder {
