--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,4 +1,5 @@
 @use '../styles/colors' as colors;
+@use '../styles/screens' as screen;
 
 .header {
   background-color: colors.$white;
@@ -12,6 +13,15 @@
   .logo {
     width: 250px;
     height: 52px;
+    @include screen.small {
+      width: 200px;
+      height: 40px;
+    }
+  }
+
+  @include screen.large {
+    flex-direction: column;
+    font-size: smaller;
   }
 }
 
@@ -34,3 +44,4 @@
     margin: 0 10px;
   }
 }
+
