--- a/src/components/table.module.scss
+++ b/src/components/table.module.scss
@@ -1,4 +1,5 @@
 @use '../styles/colors' as colors;
+@use '../styles/screens' as screen;
 
 .table_container {
   background-color: colors.$blue;
@@ -10,6 +11,10 @@
   top: 150px;
   z-index: 1;
   border-radius: 10px;
+  @include screen.large {
+    width: 98%;
+    left: 1%;
+  }
 }
 
 .table {
@@ -17,7 +22,7 @@
   margin-top: 290px;
   margin-left: auto;
   margin-right: auto;
-  width: 85%;
+  width: 70%;
   border-collapse: collapse;
   border-radius: 5px 5px 0 0;
   margin-bottom: 30px;
@@ -52,6 +57,12 @@
 
   tbody tr:last-of-type {
     border-bottom: 2px solid colors.$table-green;
+  }
+  @include screen.large {
+    width: 97%;
+  }
+  @include screen.small {
+    font-size: smaller;
   }
 }
 
