--- a/src/pages/login.module.scss
+++ b/src/pages/login.module.scss
@@ -1,4 +1,5 @@
 @use '../styles/colors' as colors;
+@use '../styles/screens' as screen;
 
 .login {
   background-color: colors.$white;
@@ -13,6 +14,13 @@
   img {
     margin-top: 50px;
   }
+
+  @include screen.small {
+    width: 95%;
+    img {
+      width: 210px;
+    }
+  }
 }
 
 .login__form {
@@ -26,6 +34,10 @@
     flex-direction: column;
     margin: 10px 0;
     color: colors.$blue;
+  }
+
+  @include screen.small {
+    width: 95%;
   }
 }
 
