--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,6 +6,7 @@ $disabled: #0039e567;
 $text-primary: #3E4854;
 $blue-shadow: rgba(5, 18, 54, 0.075);
 $table-green: #009879;
+$light-green: #cdf7e7;
 
 @mixin login-border($color: $dark-green) {
   box-shadow: -4px 9px 13px $color;
